# MapXr

./:    .clippy.toml  .gitignore  .prettierignore  404.html  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  devlog.html  docs.html  eslint.config.js  index.html  package-lock.json  package.json
.github/workflows/: build-linux.yml  build-windows.yml  deploy-site.yml  release.yml
_app/: version.json
_app/immutable/assets/: 0.BdFf_rzI.css  0.Cv-PGx23.css  0.CvxRX8s3.css  0.D7SNZ8js.css
_app/immutable/chunks/: 2taVHrq1.js  3D_l5R4X.js  BNRw7wyT.js  BPYeZ1rc.js  BZsrR0qn.js  Bt3lyPTy.js  C6RGsjzH.js  CGwnShg4.js  CTb4NadF.js  Cni--8-y.js  Coz3Twmu.js  Cu2meesX.js  Cx85uYP6.js  CyUtBfIa.js  D40A1Rfp.js  D8tjqQzh.js  DF5kQQXa.js  DbMLuP93.js  DcWz4X8c.js  Dijf7hSe.js  DkbABERa.js  Dlukdddo.js  Dsjib3ef.js  DzZ6TNdd.js  ULfJJV0e.js  ZMpBo2aj.js  gFhHgSfH.js  gYdupDUY.js  mDG6lmfc.js
_app/immutable/entry/: app.BoxpxPUB.js  app.CFdIDFkL.js  app.De5Kqv28.js  app.Du89H3th.js  app.TgKIBGPU.js  app.akOrpmbh.js  app.rs_CnH5O.js  start.C52J93SD.js  start.CAseIIWx.js  start.CQX3Snwe.js  start.CXnHapnO.js  start.D5EpkWL7.js  start.DqdRTNMC.js  start.zZHjEqIu.js
apps/desktop/: eslint.config.js  package-lock.json  package.json
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json  mobile.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/profiles/: starter-right.json
apps/desktop/src-tauri/src/: android_jni.rs  android_pump.rs  commands.rs  context_rules.rs  events.rs  lib.rs  login_item.rs  main.rs  platform.rs  pump.rs  state.rs
apps/desktop/src-tauri/src/focus_monitor/: macos.rs  mod.rs  wayland.rs  windows_impl.rs  x11.rs
apps/site/: package.json  svelte.config.js
crates/mapping-core/: Cargo.toml
crates/tap-ble/: Cargo.toml
crates/tap-ble/src/: device_info.rs  device_registry.rs  error.rs  lib.rs  manager.rs  packet_parser.rs  scanner.rs  tap_device.rs
crates/tap-ble/tests/: physical_device.rs
devlog/: 2026-02-28-core-types.html  2026-03-05-profile-validation-layer-stack.html  2026-03-10-combo-engine.html  2026-03-14-ble-scanner-filtering.html  2026-03-15-hold-modifier.html  2026-03-16-hardware-debounce-windows-ci.html  2026-03-18-ble-ux-and-role-reassignment.html  2026-03-18-profile-persistence.html  2026-03-18-project-website.html  2026-03-19-extended-keys-and-notifications.html  2026-03-20-first-release-and-distribution.html  2026-03-24-android-port.html
docs/: actions.html  adb-issues.md  aliases.html  android-plan.md  android-testing.md  autoswitch.html  debug.html  decisions.md  design-system.md  getting-started.html  layers.html  lifecycle.html  manual-testing.md  profiles.html  profilesettings.html  release-checklist.md  settings.html  triggers.html  variables.html  vision.md
docs/log/: progress.md
docs/plan/: implementation-plan.md
docs/reference/: api-doc.txt  firmware-update-aws.txt  gatt-characteristics.txt  gatt-output.txt  gettingfirmware.txt  other-uuids.txt  project-structure.md  raw-sensor-mode.txt  updaterdocs.txt  vibration.txt  windows-sdk-guids.cs
docs/spec/: android-background-dispatch-spec.md  android-ble-device-management-spec.md  android-shell-server-spec.md  android-shizuku-spec.md  android-spec.md  cli-tool-spec.md  context-switching-spec.md  debug-panel-spec.md  device-rename-spec.md  extended-keys-spec.md  finger-pattern-spec.md  haptics-spec.md  hold-modifier-spec.md  mapping-core-spec.md  notifications-spec.md  svelte-frontend-spec.md  system-tray-spec.md  tap-ble-spec.md  tauri-commands-spec.md  variable-conditions-spec.md
docs/testing/: android-manual-tests.md
mapxr-site/: package-lock.json  svelte.config.js
mapxr-site/src/: app.css  app.html
profiles/: README.md
scripts/: bump-version.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  events.rs  lib.rs  platform.rs  pump.rs  state.rs
src/lib/: commands.ts  events.ts  logger.ts  types.ts
(+193 files in other folders)
