[package]
name = "mapxr"
version = "1.0.0"
description = "Tap Strap keyboard remapper"
authors = ["mapxr contributors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mapxr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mapping-core = { path = "../../../crates/mapping-core" }
tap-ble = { path = "../../../crates/tap-ble" }
tokio = { version = "1", features = ["sync", "rt", "macros", "time"] }
anyhow = "1"
env_logger = "0.11"
enigo = "0.2"
log = "0.4"
btleplug = { version = "0.12", features = ["serde"] }
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = "0.13"
wayland-client = "0.31"
wayland-protocols-wlr = { version = "0.3", features = ["client"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
] }
winreg = "0.52"
